# SchoolScraper

./: README.md  main.py  pyproject.toml
